# Rocket-Auth

./: .env  .gitignore  Cargo.toml  package.json
migrations/20170704135745_create_user/: up.sql
src/: lib.rs  models.rs  repository.rs  router.rs
src/controllers/: authentication_controllers.rs  guards.rs  mod.rs  static_controllers.rs
src/forms/: authentication_contexts.rs  authentication_forms.rs  mod.rs
src/models/: mod.rs
src/repositories/: mod.rs  user_repository.rs
static/: index.html.hbs  layout.html.hbs  logged_out.html.hbs  login.html.hbs  register.html.hbs
static/css/: layout.css
templates/: index.html.hbs  logged_out.html.hbs  login.html.hbs  register.html.hbs
