[package]
name = "rocket_auth"
version = "0.1.0"
authors = ["JackTattersall <jack.tattersall@opencastsoftware.com>"]

[dependencies]
rocket = { path = '../RocketMaster/Rocket/lib'}
rocket_codegen = { path = '../RocketMaster/Rocket/codegen'}
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
diesel = { version = "0.13.0", features = ["postgres"] }
diesel_codegen = { version = "0.13.0", features = ["postgres"] }
dotenv = "0.9.0"
bcrypt = "0.1"

[dependencies.rocket_contrib]
path = '../RocketMaster/Rocket/contrib'
default-features = false
features = ["handlebars_templates"]